<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewMemberActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--main-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--photo+basic data-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/profile_my_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/uncle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/profile_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Input name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/profile_surname_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="Input surname"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/profile_birthday_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:hint="Input birthday"
                        android:inputType="date" />

                </LinearLayout>


            </LinearLayout>
            <!--parents-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="8dp">

                <!--father-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/profile_father_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/father"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/profile_father_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/input_birthday"
                        android:inputType="date" />



                </LinearLayout>
                <!--mother-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/profile_mother_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/mother"
                        android:inputType="textPersonName" />


                    <EditText
                        android:id="@+id/profile_mother_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/input_birthday"
                        android:inputType="date" />



                </LinearLayout>


            </LinearLayout>

            <!--kinship pets and notes-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/my_profile_save_button"
                    android:onClick="myProfileSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/my_profile_cancel_button"
                    android:onClick="myProfileCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <!--/main-->
    </ScrollView>

</android.support.constraint.ConstraintLayout>